# ShelMem

./: .env.example  .gitignore  QUICKSTART.md  README.md  package-lock.json  package.json  test-write.mjs  tsconfig.base.json
dashboard/: Dockerfile  docker-compose.yml  next.config.ts  package.json
dashboard/app/: globals.css  landing.css  layout.tsx  page.tsx
dashboard/app/dashboard/: page.tsx
dashboard/app/dashboard/treasury/: page.tsx
dashboard/app/demo/: page.tsx
dashboard/app/docs/: page.tsx
dashboard/components/: CopyButton.tsx  Footer.tsx  MemoryRow.tsx  MemoryTable.tsx  StatsBar.tsx  TestnetBanner.tsx  TreasuryPanel.tsx  WalletConnect.tsx  WalletProvider.tsx
dashboard/lib/: supabase.ts
examples/: trading-agent.mjs
scripts/: generate-keypair.mjs  test-e2e.mjs  test-real-write.mjs  test-treasury.mjs
sdk-py/: README.md  pyproject.toml
sdk-py/shelmem/: __init__.py  client.py  embeddings.py  shelby.py  supabase_client.py  types.py
sdk-py/shelmem/integrations/: crewai.py  langchain.py
sdk-py/tests/: test_shelby.py  test_treasury.py  test_types.py
sdk-ts/: README.md  package.json  test-real-write.mjs
sdk-ts/src/: embeddings.ts  index.ts  shelby.ts  supabase.ts  types.ts
sdk-ts/src/__tests__/: index.test.ts  shelby.test.ts  treasury.test.ts  types.test.ts
sdk-ts/src/integrations/: vercel-ai.ts
supabase/: migration-v2.sql  migration-v3.sql  migration-v4.sql  schema.sql
