[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelmem"
version = "0.1.0"
description = "Decentralised AI agent memory SDK — powered by Shelby Protocol and Aptos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
