[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelmem"
version = "0.1.0"
description = "Decentralised AI agent memory SDK — powered by Shelby Protocol and Aptos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "supabase>=2.0.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.50.0"]
all = ["langchain-core>=0.2.0", "crewai>=0.50.0"]
dev = ["pytest", "pytest-asyncio"]
